spata-object-fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
 export(initiateSpataObject_10X)
 export(initiateSpataObject_CountMtr)
+export(initiateSpataObject_Empty)
 export(initiateSpataObject_Examples)
 export(initiateSpataObject_ExprMtr)
 export(joinWith)
