--- a/NAMESPACE
+++ b/NAMESPACE
@@ -244,6 +244,7 @@ export(validateSpataObject)
 exportClasses(data_counts)
 exportClasses(dim_red)
 exportClasses(spata)
+exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(getTrajectoryComment)
 exportMethods(show)
