add class default_instructions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -242,8 +242,8 @@ export(validPatternRecognitionMethods)
 export(validPlotTypes)
 export(validateSpataObject)
 exportClasses(data_counts)
+exportClasses(default_instructions)
 exportClasses(dim_red)
-exportClasses(spata)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(getTrajectoryComment)
