cnv analysis fix 2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(getHclustObjectCnv)
 export(getImage)
 export(getInitiationInfo)
 export(getInitiationInput)
+export(getMatrix)
 export(getPcaDf)
 export(getPcaMtr)
 export(getSampleNames)
