--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,6 +67,10 @@ Collate:
     'get-family.R'
     'hclust-implementation.R'
     'helper-functions.R'
+    'hspa-helper-functions.R'
+    'hspa-main-functions.R'
+    'hspa-plotting.R'
+    'hspa-sub-functions.R'
     'imported-functions.R'
     'initiate-family.R'
     'is-family.R'
