--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(assessTrajectoryTrends)
 export(assessTrajectoryTrends2)
 export(assessTrajectoryTrendsCustomized)
 export(assessTrajectoryTrendsCustomized2)
+export(binarize_matrix)
 export(check_method)
 export(check_object)
 export(check_pt)
@@ -37,6 +38,7 @@ export(check_variables)
 export(clusterSpCorResults)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
+export(compute_pattern_similarity)
 export(createSegmentation)
 export(createTrajectories)
 export(discardExpressionMatrix)
@@ -77,6 +79,12 @@ export(getGeneCounts)
 export(getGeneDistMtr)
 export(getGeneMetaData)
 export(getGeneMetaDf)
+export(getGenePatternCorrelations)
+export(getGenePatternDistances)
+export(getGenePatternEvalDf)
+export(getGenePatternExtentDf)
+export(getGenePatternSimilarities)
+export(getGenePatternsAboveThreshold)
 export(getGeneSetDf)
 export(getGeneSets)
 export(getGeneSetsInteractive)
@@ -86,6 +94,7 @@ export(getGroupNames)
 export(getGroupingOptions)
 export(getHclustObject)
 export(getHclustObjectCnv)
+export(getHspaResults)
 export(getImage)
 export(getInitiationInfo)
 export(getInitiationInput)
@@ -121,6 +130,13 @@ export(hlpr_summarize_residuals)
 export(hlpr_summarize_trajectory_df)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
+export(hspaCsrCutoff)
+export(hspaCsrTesting)
+export(hspaDataBinarization)
+export(hspaPatternIdentification)
+export(hspaPatternSimilarity)
+export(hspaSelectGenes)
+export(identify_gene_patterns_dbscan)
 export(initiateSpataObject_10X)
 export(initiateSpataObject_CountMtr)
 export(initiateSpataObject_Empty)
@@ -150,6 +166,8 @@ export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
 export(plotBoxplot)
 export(plotCnvResults)
+export(plotCsrCutoffSimulations)
+export(plotCsrResults)
 export(plotCustomizedTrajectoryTrends)
 export(plotDeaGeneCount)
 export(plotDeaHeatmap)
@@ -168,7 +186,12 @@ export(plotFourStates)
 export(plotFourStates2)
 export(plotGeneDendrogram)
 export(plotGeneMetaData)
+export(plotGenePatternCluster)
+export(plotGenePatternDendrogram)
+export(plotGenePatternHeatmap)
+export(plotGenePatterns)
 export(plotHistogram)
+export(plotHspaSummary)
 export(plotPca)
 export(plotPcaVariation)
 export(plotRidgeplot)
@@ -180,6 +203,7 @@ export(plotSurface2)
 export(plotSurfaceAverage)
 export(plotSurfaceComparison)
 export(plotSurfaceComparison2)
+export(plotSurfaceHotspots)
 export(plotSurfaceInteractive)
 export(plotSurfaceQuantiles)
 export(plotTrajectory)
@@ -206,6 +230,7 @@ export(runCnvAnalysis)
 export(runDeAnalysis)
 export(runHclust)
 export(runHclustCnv)
+export(runHspa)
 export(runPca)
 export(runPca2)
 export(runSpatialCorrelationAnalysis)
@@ -222,10 +247,12 @@ export(setActiveExpressionMatrix)
 export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
+export(setCsrCutoff)
 export(setDefaultInstructions)
 export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
+export(setHspaResults)
 export(setPcaDf)
 export(setScaledMatrix)
 export(setTsneDf)
