--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(getGeneCounts)
 export(getGeneDistMtr)
 export(getGeneMetaData)
 export(getGeneMetaDf)
+export(getGenePatternCluster)
 export(getGenePatternCorrelations)
 export(getGenePatternDistances)
 export(getGenePatternEvalDf)
