--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(check_variables)
 export(clusterSpCorResults)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
+export(compute_pattern_relation)
 export(compute_pattern_similarity)
 export(createSegmentation)
 export(createTrajectories)
@@ -136,6 +137,7 @@ export(hspaCsrTesting)
 export(hspaDataBinarization)
 export(hspaPatternIdentification)
 export(hspaPatternSimilarity)
+export(hspaPatternSimilarity_future)
 export(hspaSelectGenes)
 export(identify_gene_patterns_dbscan)
 export(initiateSpataObject_10X)
@@ -187,8 +189,10 @@ export(plotFourStates)
 export(plotFourStates2)
 export(plotGeneDendrogram)
 export(plotGeneMetaData)
+export(plotGenePatternBinarized)
 export(plotGenePatternCluster)
 export(plotGenePatternDendrogram)
+export(plotGenePatternDenoised)
 export(plotGenePatternHeatmap)
 export(plotGenePatterns)
 export(plotHistogram)
