--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(compute_pattern_relation)
 export(compute_pattern_similarity)
 export(createSegmentation)
 export(createTrajectories)
+export(createTrajectoryManually)
 export(discardExpressionMatrix)
 export(discardFeatures)
 export(discardGeneFeatures)
