gsea and flipImage

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,12 +65,14 @@ Collate:
     'find-cluster.R'
     'gene-expression-analysis.R'
     'get-family.R'
+    'gsea-enrichment.R'
     'hclust-implementation.R'
     'helper-functions.R'
     'hspa-helper-functions.R'
     'hspa-main-functions.R'
     'hspa-plotting.R'
     'hspa-sub-functions.R'
+    'image-handling.R'
     'imported-functions.R'
     'initiate-family.R'
     'is-family.R'
@@ -81,6 +83,7 @@ Collate:
     'miscellaneous-data-frame-functions.R'
     'module-add-gene-sets.R'
     'module-surface-plot.R'
+    'n-functions.R'
     'package-dependencies.R'
     'plot-family-miscellaneous.R'
     'plot-family-statistics.R'
