--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(addGeneSetsInteractive)
 export(adjustDefaultInstructions)
 export(adjustDirectoryInstructions)
 export(adjustGeneSetDf)
+export(allColorpalettes)
+export(allColorspectra)
 export(all_color_palettes)
 export(all_color_spectra)
 export(assessAutoencoderOptions)
@@ -38,6 +40,7 @@ export(check_variables)
 export(clusterSpCorResults)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
+export(computeSignatureEnrichment)
 export(compute_pattern_relation)
 export(compute_pattern_similarity)
 export(createSegmentation)
@@ -58,6 +61,7 @@ export(findHierarchicalClusterCnv)
 export(findMonocleClusters)
 export(findNearestNeighbourClusters)
 export(findSeuratClusters)
+export(flipImage)
 export(getActiveMatrixName)
 export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
@@ -71,6 +75,8 @@ export(getDeaOverview)
 export(getDeaResultsDf)
 export(getDefaultInstructions)
 export(getDirectoryInstructions)
+export(getEnrichmentDf)
+export(getEnrichmentResults)
 export(getExpressionMatrix)
 export(getExpressionMatrixNames)
 export(getFeatureDf)
@@ -89,6 +95,7 @@ export(getGenePatternExtentDf)
 export(getGenePatternSimilarities)
 export(getGenePatternsAboveThreshold)
 export(getGeneSetDf)
+export(getGeneSetOverview)
 export(getGeneSets)
 export(getGeneSetsInteractive)
 export(getGenes)
@@ -165,6 +172,7 @@ export(loadGeneSetDf)
 export(loadSpataObject)
 export(logarithmic_trends)
 export(mergeSpataObjects)
+export(nGenes)
 export(peak_trends)
 export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
@@ -196,6 +204,7 @@ export(plotGenePatternDendrogram)
 export(plotGenePatternDenoised)
 export(plotGenePatternHeatmap)
 export(plotGenePatterns)
+export(plotGseaDotPlot)
 export(plotHistogram)
 export(plotHspaSummary)
 export(plotPca)
