point size fixed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,6 +66,7 @@ Collate:
     'find-cluster.R'
     'gene-expression-analysis.R'
     'gene-set-enrichment.R'
+    'geom_point_fixed.R'
     'get-family.R'
     'hclust-implementation.R'
     'helper-functions.R'
@@ -80,6 +81,7 @@ Collate:
     'joinWith-family.R'
     'joinWithDimRed-family.R'
     'loading-and-saving.R'
+    'logical-tests.R'
     'merge-spata-objects.R'
     'miscellaneous-data-frame-functions.R'
     'module-add-gene-sets.R'
