--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ export(joinWithTsne)
 export(joinWithUmap)
 export(joinWithVariables)
 export(legendBottom)
+export(legendColor)
 export(legendNone)
 export(legendRight)
 export(legendTop)
