pull_var fix and other

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,6 +68,7 @@ Collate:
     'gene-set-enrichment.R'
     'geom_point_fixed.R'
     'get-family.R'
+    'ggplot2-layer.R'
     'hclust-implementation.R'
     'helper-functions.R'
     'hspa-helper-functions.R'
@@ -82,6 +83,7 @@ Collate:
     'joinWithDimRed-family.R'
     'loading-and-saving.R'
     'logical-tests.R'
+    'lump-groups.R'
     'merge-spata-objects.R'
     'miscellaneous-data-frame-functions.R'
     'module-add-gene-sets.R'
