--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(getTrajectoryDf)
 export(getTrajectoryLength)
 export(getTrajectoryNames)
 export(getTrajectoryObject)
+export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
 export(gradient_trends)
@@ -179,6 +180,7 @@ export(loadCorrespondingSeuratObject)
 export(loadGeneSetDf)
 export(loadSpataObject)
 export(logarithmic_trends)
+export(mergeGroups)
 export(mergeSpataObjects)
 export(nGenes)
 export(peak_trends)
@@ -230,6 +232,7 @@ export(plotSurfaceComparison2)
 export(plotSurfaceHotspots)
 export(plotSurfaceInteractive)
 export(plotSurfaceQuantiles)
+export(plotTrajectories)
 export(plotTrajectory)
 export(plotTrajectoryFeatures)
 export(plotTrajectoryFeaturesDiscrete)
