--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -99,12 +99,15 @@ Collate:
     'print-family.R'
     'process-seurat-object.R'
     'r-objects.R'
+    'relevel.R'
     'rename-family.R'
     'set-family.R'
     'shiny-dashboard-tab-items.R'
+    'showColors.R'
     'spata-object-manipulation.R'
     'spatial-correlation.R'
     'trajectory-analysis.R'
+    'trajectory-plots-new.R'
     'transform-family.R'
     'update-spata-object.R'
     'valid-input-options.R'
