--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(findHierarchicalClusterCnv)
 export(findMonocleClusters)
 export(findNearestNeighbourClusters)
 export(findSeuratClusters)
+export(flipCoords)
 export(flipImage)
 export(geom_point_fixed)
 export(getActiveMatrixName)
@@ -75,7 +76,9 @@ export(getDeaGenes)
 export(getDeaOverview)
 export(getDeaResultsDf)
 export(getDefault)
+export(getDefaultGrouping)
 export(getDefaultInstructions)
+export(getDefaultTrajectory)
 export(getDirectoryInstructions)
 export(getExpressionMatrix)
 export(getExpressionMatrixNames)
@@ -135,6 +138,7 @@ export(hlpr_add_residuals)
 export(hlpr_add_residuals_customized)
 export(hlpr_compile_trajectory)
 export(hlpr_filter_trend)
+export(hlpr_join_with_aes)
 export(hlpr_join_with_color_by)
 export(hlpr_name_models)
 export(hlpr_normalize_vctr)
@@ -241,13 +245,17 @@ export(plotTrajectoryFitCustomized)
 export(plotTrajectoryGeneSets)
 export(plotTrajectoryGenes)
 export(plotTrajectoryHeatmap)
+export(plotTrajectoryLineplot)
 export(plotTsne)
+export(plotTsneComparison)
 export(plotUmap)
+export(plotUmapComparison)
 export(plotViolinplot)
 export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
+export(relevelGroups)
 export(renameFeatures)
 export(renameGroups)
 export(renameSegments)
@@ -276,7 +284,9 @@ export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
 export(setCsrCutoff)
+export(setDefaultGrouping)
 export(setDefaultInstructions)
+export(setDefaultTrajectory)
 export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
@@ -286,11 +296,13 @@ export(setScaledMatrix)
 export(setTsneDf)
 export(setUmapDf)
 export(shiftTrajectoryDf)
+export(showColors)
 export(smoothSpatially)
 export(subsetByBarcodes_CountMtr)
 export(subsetByBarcodes_ExprMtr)
 export(subsetBySegment_CountMtr)
 export(subsetBySegment_ExprMtr)
+export(theme_trajectory_fit)
 export(trajectory_patterns)
 export(transformSeuratToSpata)
 export(transformSpataToCDS)
@@ -310,6 +322,7 @@ export(validPadjMethods)
 export(validPatternRecognitionMethods)
 export(validPlotTypes)
 export(validateSpataObject)
+export(vselect)
 exportClasses(data_counts)
 exportClasses(default_instructions)
 exportClasses(dim_red)
