--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ export(hlpr_add_residuals)
 export(hlpr_add_residuals_customized)
 export(hlpr_compile_trajectory)
 export(hlpr_filter_trend)
+export(hlpr_join_with_aes)
 export(hlpr_join_with_color_by)
 export(hlpr_name_models)
 export(hlpr_normalize_vctr)
@@ -256,6 +257,7 @@ export(runAutoencoderDenoising)
 export(runCnvAnalysis)
 export(runDeAnalysis)
 export(runGSEA)
+export(runGsea)
 export(runHclust)
 export(runHclustCnv)
 export(runHspa)
@@ -310,6 +312,7 @@ export(validPadjMethods)
 export(validPatternRecognitionMethods)
 export(validPlotTypes)
 export(validateSpataObject)
+export(vselect)
 exportClasses(data_counts)
 exportClasses(default_instructions)
 exportClasses(dim_red)
