--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,6 +59,8 @@ Collate:
     'checkpoint.R'
     'cnv-analysis.R'
     'compute-family.R'
+    'createAnnoation.R'
+    'create_annotation.R'
     'create_family.R'
     'data.R'
     'dimensional-reduction.R'
@@ -86,6 +88,7 @@ Collate:
     'lump-groups.R'
     'merge-spata-objects.R'
     'miscellaneous-data-frame-functions.R'
+    'miscellaneous.R'
     'module-add-gene-sets.R'
     'module-surface-plot.R'
     'n-functions.R'
