--- a/NAMESPACE
+++ b/NAMESPACE
@@ -230,6 +230,7 @@ export(plotHspaSummary)
 export(plotPca)
 export(plotPcaVariation)
 export(plotRidgeplot)
+export(plotRiverplot)
 export(plotScatterplot)
 export(plotSegmentation)
 export(plotStatisticsInteractive)
@@ -316,6 +317,7 @@ export(transformSpataToSeurat)
 export(updateSpataObject)
 export(validActivationFunctions)
 export(validAgglomerationMethods)
+export(validAlluvialTypes)
 export(validColorPalettes)
 export(validColorSpectra)
 export(validDeAnalysisMethods)
