--- a/NAMESPACE
+++ b/NAMESPACE
@@ -191,6 +191,7 @@ export(loadSpataObject)
 export(logarithmic_trends)
 export(mergeGroups)
 export(mergeSpataObjects)
+export(nCounts)
 export(nGenes)
 export(peak_trends)
 export(plotAutoencoderAssessment)
