--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -104,6 +104,7 @@ Collate:
     'plot-family-surface.R'
     'plot-family-trajectory.R'
     'plotSurfaceBase.R'
+    'plotSurfaceInteractivelyDiet.R'
     'plotting-add-ons.R'
     'print-family.R'
     'process-seurat-object.R'
