--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(addGeneMetaData)
 export(addGeneSet)
 export(addGeneSetsInteractive)
 export(addImageAnnotation)
+export(addPointsBase)
 export(adjustDefaultInstructions)
 export(adjustDirectoryInstructions)
 export(adjustGeneSetDf)
@@ -61,6 +62,7 @@ export(discardFeatures)
 export(discardGeneFeatures)
 export(discardGeneSets)
 export(discardGenes)
+export(discardImageAnnotations)
 export(examineClusterResults)
 export(examineTrajectoryAssessment)
 export(exchangeImage)
@@ -127,6 +129,7 @@ export(getHclustObjectCnv)
 export(getHspaResults)
 export(getImage)
 export(getImageAnnotation)
+export(getImageAnnotationBarcodes)
 export(getImageAnnotationDf)
 export(getImageAnnotationIds)
 export(getImageAnnotationTags)
@@ -201,6 +204,7 @@ export(isFeature)
 export(isFlipped)
 export(isGene)
 export(isGeneSet)
+export(isNumericVariable)
 export(joinWith)
 export(joinWithFeatures)
 export(joinWithGeneSets)
@@ -223,6 +227,7 @@ export(loadImageHighres)
 export(loadImageLowres)
 export(loadSpataObject)
 export(logarithmic_trends)
+export(mapImageAnnotationTags)
 export(mergeGroups)
 export(mergeSpataObjects)
 export(nBarcodes)
@@ -306,6 +311,7 @@ export(relevelGroups)
 export(removeAnnotation)
 export(renameFeatures)
 export(renameGroups)
+export(renameImageAnnotationId)
 export(renameSegments)
 export(runAutoencoderAssessment)
 export(runAutoencoderDenoising)
