flip coords fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(findHierarchicalClusterCnv)
 export(findMonocleClusters)
 export(findNearestNeighbourClusters)
 export(findSeuratClusters)
+export(flipCoords)
 export(flipImage)
 export(flipImageAndCoords)
 export(geom_point_fixed)
