--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(all_color_palettes)
 export(all_color_spectra)
 export(annotateBarcodeSpots)
 export(annotateImage)
-export(asVisium)
+export(asHistologyImage)
 export(assessAutoencoderOptions)
 export(assessTrajectoryTrends)
 export(assessTrajectoryTrends2)
@@ -51,7 +51,9 @@ export(computeGeneMetaData)
 export(computeGeneMetaData2)
 export(compute_pattern_relation)
 export(compute_pattern_similarity)
+export(containsHistologyImage)
 export(containsImage)
+export(containsImageObject)
 export(countImageAnnotationTags)
 export(createSegmentation)
 export(createTrajectories)
@@ -377,6 +379,7 @@ export(validDimRedMethods)
 export(validDirectoryInstructionSlots)
 export(validDistanceMethods)
 export(validHierarchicalClusterMethods)
+export(validImageClasses)
 export(validPadjMethods)
 export(validPatternRecognitionMethods)
 export(validPlotTypes)
@@ -389,7 +392,7 @@ exportClasses(default_instructions)
 exportClasses(dim_red)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
-exportMethods(asVisium)
+exportMethods(asHistologyImage)
 exportMethods(getTrajectoryComment)
 exportMethods(show)
 import(SingleCellExperiment)
