--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,8 @@ export(getHspaResults)
 export(getImage)
 export(getImageAnnotation)
 export(getImageAnnotationBarcodes)
+export(getImageAnnotationCenter)
+export(getImageAnnotationCenterBcsp)
 export(getImageAnnotationDf)
 export(getImageAnnotationIds)
 export(getImageAnnotationTags)
