--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ export(getGenePatternExtentDf)
 export(getGenePatternSimilarities)
 export(getGenePatternsAboveThreshold)
 export(getGeneSetDf)
+export(getGeneSetList)
 export(getGeneSetOverview)
 export(getGeneSets)
 export(getGeneSetsInteractive)
