--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -108,6 +108,7 @@ Collate:
     'print-family.R'
     'process-seurat-object.R'
     'r-objects.R'
+    'region-associated-patterns.R'
     'relevel.R'
     'rename-family.R'
     'set-family.R'
@@ -115,6 +116,7 @@ Collate:
     'showColors.R'
     'spata-object-manipulation.R'
     'spatial-correlation.R'
+    'spatially-variable-genes-wrapper.R'
     'trajectory-analysis.R'
     'trajectory-plots-new.R'
     'transform-family.R'
