--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(countImageAnnotationTags)
 export(createSegmentation)
 export(createTrajectories)
 export(createTrajectoryManually)
+export(create_model_df)
 export(discardAnnotationVariable)
 export(discardExpressionMatrix)
 export(discardFeatures)
@@ -159,6 +160,8 @@ export(getSegmentNames)
 export(getSignatureEnrichment)
 export(getSpCorCluster)
 export(getSpCorClusterNames)
+export(getSparkxGeneDf)
+export(getSparkxResults)
 export(getSpataDf)
 export(getTrajectoryComment)
 export(getTrajectoryDf)
@@ -179,7 +182,9 @@ export(gradient_trends)
 export(hlpr_add_models)
 export(hlpr_add_old_coords)
 export(hlpr_add_residuals)
+export(hlpr_add_residuals2)
 export(hlpr_add_residuals_customized)
+export(hlpr_add_residuals_diet)
 export(hlpr_compile_trajectory)
 export(hlpr_filter_trend)
 export(hlpr_join_with_aes)
@@ -329,6 +334,7 @@ export(runHclustCnv)
 export(runHspa)
 export(runPca)
 export(runPca2)
+export(runSparkx)
 export(runSpatialCorrelationAnalysis)
 export(runTsne)
 export(runTsne2)
