Spatial Gradient Screening

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -104,11 +104,11 @@ Collate:
     'plot-family-trajectory.R'
     'plotSurfaceBase.R'
     'plotSurfaceInteractivelyDiet.R'
+    'plotVolcanoSGS.R'
     'plotting-add-ons.R'
     'print-family.R'
     'process-seurat-object.R'
     'r-objects.R'
-    'region-associated-patterns.R'
     'relevel.R'
     'rename-family.R'
     'set-family.R'
@@ -116,6 +116,7 @@ Collate:
     'showColors.R'
     'spata-object-manipulation.R'
     'spatial-correlation.R'
+    'spatial-gradient-screening.R'
     'spatially-variable-genes-wrapper.R'
     'trajectory-analysis.R'
     'trajectory-plots-new.R'
