--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,10 @@ export(assessTrajectoryTrends)
 export(assessTrajectoryTrends2)
 export(assessTrajectoryTrendsCustomized)
 export(assessTrajectoryTrendsCustomized2)
+export(bin_by_angle)
+export(bin_by_area)
 export(binarize_matrix)
+export(buffer_area)
 export(check_image_annoation_ids)
 export(check_image_annoation_tags)
 export(check_method)
@@ -49,8 +52,11 @@ export(check_variables)
 export(clusterSpCorResults)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
+export(compute_angle_between_two_points)
+export(compute_angle_related_to_center)
 export(compute_pattern_relation)
 export(compute_pattern_similarity)
+export(compute_sgs_df)
 export(containsHistologyImage)
 export(containsImage)
 export(containsImageObject)
@@ -66,6 +72,7 @@ export(discardGeneFeatures)
 export(discardGeneSets)
 export(discardGenes)
 export(discardImageAnnotations)
+export(evaluate_spatial_patterns)
 export(examineClusterResults)
 export(examineTrajectoryAssessment)
 export(exchangeImage)
@@ -83,6 +90,8 @@ export(flipImageAndCoords)
 export(geom_point_fixed)
 export(getActiveMatrixName)
 export(getAnnotationNames)
+export(getAscendingVars)
+export(getAscendingVarsDf)
 export(getAutoencoderAssessment)
 export(getAutoencoderSetUp)
 export(getBarcodeSpotDistances)
@@ -99,6 +108,8 @@ export(getDefault)
 export(getDefaultGrouping)
 export(getDefaultInstructions)
 export(getDefaultTrajectory)
+export(getDescendingVars)
+export(getDescendingVarsDf)
 export(getDirectoryInstructions)
 export(getExpressionMatrix)
 export(getExpressionMatrixNames)
@@ -238,6 +249,7 @@ export(loadImageHighres)
 export(loadImageLowres)
 export(loadSpataObject)
 export(logarithmic_trends)
+export(make_pretty_model_names)
 export(mapImageAnnotationTags)
 export(mergeGroups)
 export(mergeSpataObjects)
@@ -246,9 +258,11 @@ export(nCounts)
 export(nGenes)
 export(nImageAnnotations)
 export(peak_trends)
+export(pick_vars)
 export(plotAutoencoderAssessment)
 export(plotAutoencoderResults)
 export(plotBoxplot)
+export(plotClockplot)
 export(plotCnvResults)
 export(plotCsrCutoffSimulations)
 export(plotCsrResults)
@@ -290,6 +304,7 @@ export(plotRiverplot)
 export(plotScatterplot)
 export(plotSegmentation)
 export(plotStatisticsInteractive)
+export(plotSummarySGS)
 export(plotSurface)
 export(plotSurface2)
 export(plotSurfaceAverage)
@@ -299,6 +314,7 @@ export(plotSurfaceComparison2)
 export(plotSurfaceHotspots)
 export(plotSurfaceInteractive)
 export(plotSurfaceQuantiles)
+export(plotSurfaceSGS)
 export(plotTrajectories)
 export(plotTrajectory)
 export(plotTrajectoryFeatures)
@@ -314,6 +330,7 @@ export(plotTsneComparison)
 export(plotUmap)
 export(plotUmapComparison)
 export(plotViolinplot)
+export(plotVolcanoSGS)
 export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
@@ -365,11 +382,15 @@ export(setTsneDf)
 export(setUmapDf)
 export(shiftTrajectoryDf)
 export(showColors)
+export(showModels)
 export(smoothSpatially)
+export(spatialGradientScreening)
 export(subsetByBarcodes_CountMtr)
 export(subsetByBarcodes_ExprMtr)
 export(subsetBySegment_CountMtr)
 export(subsetBySegment_ExprMtr)
+export(summarize_and_shift_variable_df)
+export(summarize_sgs_df)
 export(theme_trajectory_fit)
 export(titleNone)
 export(trajectory_patterns)
