--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ export(getTrajectoryObject)
 export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
+export(getVarsDf)
 export(ggpInit)
 export(ggpLayerFrameByCoords)
 export(ggpLayerFrameByImage)
@@ -424,6 +425,8 @@ exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
 exportMethods(getTrajectoryComment)
+exportMethods(plotClockplot)
+exportMethods(runGSEA)
 exportMethods(show)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
