--- a/NAMESPACE
+++ b/NAMESPACE
@@ -298,6 +298,7 @@ export(plotHistogram)
 export(plotHspaSummary)
 export(plotImage)
 export(plotImageAnnotations)
+export(plotImageGgplot)
 export(plotPca)
 export(plotPcaVariation)
 export(plotRidgeplot)
@@ -342,6 +343,7 @@ export(renameFeatures)
 export(renameGroups)
 export(renameImageAnnotationId)
 export(renameSegments)
+export(rotateImage)
 export(runAutoencoderAssessment)
 export(runAutoencoderDenoising)
 export(runCnvAnalysis)
