--- a/graphics/spatial_gradient_analysis/.gitignore
+++ b/graphics/spatial_gradient_analysis/.gitignore
@@ -2,3 +2,6 @@ necrotic_histology_example.png
 rap_volcano_plot.png
 surface.png
 volcano_labeled.png
+cluster_with_injury.png
+injury.png
+not_identified_by_dea.png
