rename annotation functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,10 +52,6 @@ Collate:
     'S4-programming-aid.R'
     'add-family.R'
     'adjust-family.R'
-    'annotateBarcodeSpots.R'
-    'annotateImage-UI.R'
-    'annotateImage-helper.R'
-    'annotateImage.R'
     'as-family.R'
     'autoencoder-preliminary-functions.R'
     'autoencoder-preliminary-plotting-functions.R'
@@ -65,6 +61,9 @@ Collate:
     'checkpoint.R'
     'cnv-analysis.R'
     'compute-family.R'
+    'createImageAnnotations-UI.R'
+    'createImageAnnotations.R'
+    'createSegmentation.R'
     'create_family.R'
     'data.R'
     'dimensional-reduction.R'
@@ -112,6 +111,7 @@ Collate:
     'rename-family.R'
     'set-family.R'
     'shiny-dashboard-tab-items.R'
+    'shiny-helper-descriptions.R'
     'shinyWrapper.R'
     'showColors.R'
     'spata-object-manipulation.R'
