spatial trajectory screening revised

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,8 +64,10 @@ Collate:
     'createImageAnnotations-UI.R'
     'createImageAnnotations.R'
     'createSegmentation.R'
+    'createSpatialTrajectories.R'
     'create_family.R'
     'data.R'
+    'deprecated.R'
     'dimensional-reduction.R'
     'documentation-dummies.R'
     'find-cluster.R'
@@ -80,6 +82,7 @@ Collate:
     'hspa-main-functions.R'
     'hspa-plotting.R'
     'hspa-sub-functions.R'
+    'image-annotation-screening.R'
     'image-handling.R'
     'imported-functions.R'
     'initiate-family.R'
@@ -92,6 +95,7 @@ Collate:
     'merge-spata-objects.R'
     'miscellaneous-data-frame-functions.R'
     'miscellaneous.R'
+    'modeling.R'
     'module-add-gene-sets.R'
     'module-surface-plot.R'
     'n-functions.R'
@@ -100,9 +104,9 @@ Collate:
     'plot-family-statistics.R'
     'plot-family-summaries.R'
     'plot-family-surface.R'
-    'plot-family-trajectory.R'
     'plotSurfaceBase.R'
     'plotSurfaceInteractivelyDiet.R'
+    'plotTrajectoryLineplotFitted.R'
     'plotting-add-ons.R'
     'print-family.R'
     'process-seurat-object.R'
@@ -118,8 +122,8 @@ Collate:
     'spatial-correlation.R'
     'spatial-gradient-screening.R'
     'spatially-variable-genes-wrapper.R'
-    'trajectory-analysis.R'
     'trajectory-plots-new.R'
+    'trajectory-screening.R'
     'transform-family.R'
     'update-spata-object.R'
     'valid-input-options.R'
