--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(addGeneSetsInteractive)
 export(addImageAnnotation)
 export(addPointsBase)
 export(addSegmentationVariable)
+export(add_models)
 export(adjustDefaultInstructions)
 export(adjustDirectoryInstructions)
 export(adjustGeneSetDf)
@@ -107,6 +108,7 @@ export(getDefault)
 export(getDefaultGrouping)
 export(getDefaultInstructions)
 export(getDefaultTrajectory)
+export(getDefaultTrajectoryId)
 export(getDescendingVars)
 export(getDescendingVarsDf)
 export(getDirectoryInstructions)
@@ -175,8 +177,11 @@ export(getSpCorClusterNames)
 export(getSparkxGeneDf)
 export(getSparkxResults)
 export(getSpataDf)
+export(getSpatialTrajectory)
+export(getSpatialTrajectoryIds)
 export(getTrajectoryComment)
 export(getTrajectoryDf)
+export(getTrajectoryIds)
 export(getTrajectoryLength)
 export(getTrajectoryNames)
 export(getTrajectoryObject)
@@ -259,6 +264,8 @@ export(nBarcodes)
 export(nCounts)
 export(nGenes)
 export(nImageAnnotations)
+export(nest_shifted_projection_df)
+export(normalize_smrd_projection_df)
 export(peak_trends)
 export(pick_vars)
 export(plotAutoencoderAssessment)
@@ -306,6 +313,7 @@ export(plotRidgeplot)
 export(plotRiverplot)
 export(plotScatterplot)
 export(plotSegmentation)
+export(plotSpatialTrajectories)
 export(plotStatisticsInteractive)
 export(plotSummarySGS)
 export(plotSurface)
@@ -318,8 +326,8 @@ export(plotSurfaceHotspots)
 export(plotSurfaceInteractive)
 export(plotSurfaceQuantiles)
 export(plotSurfaceSGS)
-export(plotTrajectories)
 export(plotTrajectory)
+export(plotTrajectoryBarplot)
 export(plotTrajectoryFeatures)
 export(plotTrajectoryFeaturesDiscrete)
 export(plotTrajectoryFit)
@@ -338,6 +346,8 @@ export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
+export(project_on_trajectory)
+export(project_on_vector)
 export(relevelGroups)
 export(removeAnnotation)
 export(renameFeatures)
@@ -374,6 +384,7 @@ export(setCsrCutoff)
 export(setDefaultGrouping)
 export(setDefaultInstructions)
 export(setDefaultTrajectory)
+export(setDefaultTrajectoryId)
 export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
@@ -385,15 +396,18 @@ export(setScaledMatrix)
 export(setTsneDf)
 export(setUmapDf)
 export(shiftTrajectoryDf)
+export(shift_smrd_projection_df)
 export(showColors)
 export(showModels)
 export(smoothSpatially)
 export(spatialGradientScreening)
+export(spatialTrajectoryScreening)
 export(subsetByBarcodes_CountMtr)
 export(subsetByBarcodes_ExprMtr)
 export(subsetBySegment_CountMtr)
 export(subsetBySegment_ExprMtr)
 export(summarize_and_shift_variable_df)
+export(summarize_projection_df)
 export(summarize_sgs_df)
 export(theme_trajectory_fit)
 export(titleNone)
@@ -427,8 +441,10 @@ exportClasses(dim_red)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
+exportMethods(asSpatialTrajectory)
 exportMethods(getTrajectoryComment)
 exportMethods(plotClockplot)
+exportMethods(plotSurfaceSGS)
 exportMethods(runGSEA)
 exportMethods(show)
 import(SingleCellExperiment)
